trying to fix youtube on mobile

--- a/style.css
+++ b/style.css
@@ -94,12 +94,18 @@ p{
     display: inline-block;
 }
 
+.vid_container{
+    text-align: center;
+}
+
 iframe{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 50%;
     padding: 20px;
 }
+
 
 #sketch{
     display: block;
